# dive

./: CMakeLists.txt
capture_service/: CMakeLists.txt  command_utils.cc  command_utils.h  command_utils_win32.cc  device_mgr.cc
cli/: cli.cpp  cli.h  commands.cpp
common/: dive_cmake_generated.h.in  dive_version.h  dive_version_utils.h
dive_core/: dive_file_container.cpp
dive_platform/: CMakeLists.txt  dive_host_platform.cpp  dive_host_platform.h  dive_host_platform_linux.cpp  dive_host_platform_win32.cpp
host_cli/: host_cli_main.cpp
ui/: CMakeLists.txt  about_window.cpp  analyze_window.cpp  analyze_window.h  async_worker.cpp  async_worker.h  event_utils.h  main_window.cpp  main_window.h  overlay.cpp  overlay.h  perf_counter_plugin.cpp  perf_counter_plugin.h  trace_controller.cpp  trace_controller.h  trace_states.cpp  trace_states.h
